[package]
name = "hjkl-form"
description = "Vim-modal forms for hjkl-based apps."
keywords = ["form", "vim", "tui", "modal", "ui"]
categories = ["command-line-interface", "gui"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
hjkl-buffer = { path = "../hjkl-buffer", version = "=0.3.0" }
hjkl-engine = { path = "../hjkl-engine", version = "=0.3.0", default-features = false }

[features]
crossterm = ["hjkl-engine/crossterm"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
