[package]
name = "hjkl-form"
description = "Vim-modal forms for hjkl-based apps."
keywords = ["form", "vim", "tui", "modal", "ui"]
categories = ["command-line-interface", "gui"]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl-form"
homepage = "https://hjkl.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
readme = "README.md"

[dependencies]
hjkl-buffer = "0.3"
hjkl-engine = { version = "0.3", default-features = false }

[features]
crossterm = ["hjkl-engine/crossterm"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
